--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -68,10 +68,22 @@
 		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.buffers</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.conditions</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
