--- a/logback/encoder-core/pom.xml
+++ b/logback/encoder-core/pom.xml
@@ -31,21 +31,31 @@
 	</licenses>
 	
 	<dependencies>
+	
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.constants</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>de.huxhorn.sulky</groupId>
 			<artifactId>de.huxhorn.sulky.codec</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.codec.filebuffer</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 </project>
 
