--- a/logback/multiplex-appender-classic-xml/pom.xml
+++ b/logback/multiplex-appender-classic-xml/pom.xml
@@ -32,6 +32,12 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.codec</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.data.logging-xml-serializer</artifactId>
 			<scope>compile</scope>
