--- a/lilith-data/eventsource-xml/pom.xml
+++ b/lilith-data/eventsource-xml/pom.xml
@@ -45,8 +45,13 @@
 		
 		<dependency>
 			<groupId>stax</groupId>
+			<artifactId>stax-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>stax</groupId>
 			<artifactId>stax</artifactId>
-			<version>1.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -56,6 +61,7 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!--
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
@@ -67,6 +73,7 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		-->
 		
 		<dependency>
 			<groupId>junit</groupId>
