--- a/logback/event-producers/pom.xml
+++ b/logback/event-producers/pom.xml
@@ -80,10 +80,18 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<!--
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		-->
 	</dependencies>
 </project>
 
