--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -25,7 +25,7 @@
 		<logbackVersion>0.9.22</logbackVersion>
 		<springVersion>3.0.2.RELEASE</springVersion>
 		<aspectjVersion>1.6.8</aspectjVersion>
-		
+		<httpcomponentsVersion>4.0.1</httpcomponentsVersion>
 		<!-- The following lines prevent "[WARNING] Using platform encoding[..]" messages -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -404,6 +404,12 @@
 			
 			<dependency>
 				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.sounds-api</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
 				<artifactId>de.huxhorn.sulky.swing</artifactId>
 				<version>${sulkyVersion}</version>
 			</dependency>
@@ -515,8 +521,20 @@
 
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>${httpcomponentsVersion}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.0.1</version>
+				<version>${httpcomponentsVersion}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
