--- a/jul/xml/pom.xml
+++ b/jul/xml/pom.xml
@@ -68,6 +68,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.io</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>stax</groupId>
 			<artifactId>stax-api</artifactId>
 			<scope>compile</scope>
