--- a/lilith-engine/pom.xml
+++ b/lilith-engine/pom.xml
@@ -79,8 +79,8 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.io</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
