Moved FilteringBuffer and FilteringCallable into separate sulky module.

--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -377,6 +377,11 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.buffers.filtering</artifactId>
+			<scope>compile</scope>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>commons-httpclient</groupId>
