--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -433,6 +433,12 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>de.huxhorn.sulky</groupId>
+				<artifactId>de.huxhorn.sulky.buffers.filtering</artifactId>
+				<version>${sulkyVersion}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
 				<version>2.5</version>
