--- a/log4j/pom.xml
+++ b/log4j/pom.xml
@@ -18,7 +18,9 @@
 	</parent>
 	
 	<modules>
+		<module>throwable-parser</module>
 		<module>xml</module>
+		<module>producer</module>
 	</modules>
 
 </project>
