--- a/sandbox/log4j-sandbox/pom.xml
+++ b/sandbox/log4j-sandbox/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>de.huxhorn.lilith.sandbox.log4j</artifactId>
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
-	<name>Lo4j Sandbox</name>
+	<name>Log4j Sandbox</name>
 	<description>This file is part of Lilith. It's a log4j sandbox.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
@@ -71,25 +71,13 @@
 	</build>
 	
 	<dependencies>
+		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
+			<scope>compile</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
