--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -356,12 +356,21 @@
 			<artifactId>de.huxhorn.sulky.io</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.1</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!--
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		-->
 
 		<!--
 		commons-lang dependency below is needed to override 1.0 dependency
