Split event-producers into producer-classic and producer-access.

--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -219,10 +219,16 @@
 			
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
-				<artifactId>de.huxhorn.lilith.logback.event-producers</artifactId>
+				<artifactId>de.huxhorn.lilith.logback.producer.classic</artifactId>
 				<version>${lilithVersion}</version>
 			</dependency>
 			
+			<dependency>
+				<groupId>de.huxhorn.lilith</groupId>
+				<artifactId>de.huxhorn.lilith.logback.producer.access</artifactId>
+				<version>${lilithVersion}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
