--- a/logback/producer-classic/pom.xml
+++ b/logback/producer-classic/pom.xml
@@ -3,10 +3,10 @@
 		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
-	<artifactId>de.huxhorn.lilith.logback.event-producers</artifactId>
+	<artifactId>de.huxhorn.lilith.logback.producer.classic</artifactId>
 	<version>${parent.version}</version>
 	<packaging>jar</packaging>
-	<name>Logback Event Producers</name>
+	<name>Logback Event Producer - Classic</name>
 	<description>This file is part of Lilith. It contains event producers.</description>
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
@@ -37,11 +37,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-access</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.engine</artifactId>
 			<scope>compile</scope>
@@ -53,18 +48,7 @@
 		</dependency>
 		<dependency>
 			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.data.access</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
 			<artifactId>de.huxhorn.lilith.logback.logging-adapter</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>de.huxhorn.lilith</groupId>
-			<artifactId>de.huxhorn.lilith.logback.access-adapter</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
