--- a/lilith-data/logging-xml-serializer/build.gradle
+++ b/lilith-data/logging-xml-serializer/build.gradle
@@ -1,5 +1,3 @@
-archivesBaseName = 'de.huxhorn.lilith.data.logging-xml-serializer'
-
 dependencies {
 	compile project(':lilith-data:logging-xml')
 	compile libraries.'sulky-codec'
@@ -7,5 +5,7 @@ dependencies {
 	compile libraries.'sulky-stax'
 	compile libraries.'stax-api'
 	testCompile libraries.'stax'
+	testCompile project(':lilith-data:logging')
+	testCompile project(':lilith-data:eventsource')
 }
 
