--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ task build << {
 }
 
 allprojects {
-	defaultTasks 'clean', 'build'
+	defaultTasks 'clean', 'build', 'uploadArchives'
     group = 'de.huxhorn.lilith'
     version = '0.9.40'
 }
@@ -133,7 +133,7 @@ subprojects {
 			pom.whenConfigured { pom ->
 				// dep is a native Maven dependency object (With properties artifactId, groupId, ...)
 				for(dep in pom.dependencies) {
-					println(dep.artifactId)
+					//println(dep.artifactId)
 					mapping=artifactMapping[dep.artifactId];
 					if(mapping) {
 						println("Mapping ${dep.artifactId} to ${mapping}...")
