--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'lilith-sender', 'lilith-data:eventsource', 'lilith-data:eventsource-xml', 'lilith-data:logging', 'lilith-data:logging-xml', 'lilith-data:logging-xml-serializer'
+include 'lilith-sender', 'lilith-data:eventsource', 'lilith-data:eventsource-xml', 'lilith-data:logging', 'lilith-data:logging-xml', 'lilith-data:logging-xml-serializer', 'lilith-data:logging-protobuf', 'lilith-data:access', 'lilith-data:access-protobuf'
