--- a/build.gradle
+++ b/build.gradle
@@ -134,7 +134,7 @@ subprojects {
     dependencies {
         testCompile libraries.junit
         testCompile libraries.'slf4j-api'
-        testCompile libraries.'logback-classic'
+        testRuntime libraries.'logback-classic'
     }
 
 
