--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -23,7 +23,7 @@
 		<sulkyVersion><!-- SV -->0.9.12-SNAPSHOT</sulkyVersion>
 		<slf4jVersion>1.6.1</slf4jVersion>
 		<logbackVersion>0.9.24</logbackVersion>
-		<springVersion>3.0.2.RELEASE</springVersion>
+		<springVersion>3.0.3.RELEASE</springVersion>
 		<aspectjVersion>1.6.8</aspectjVersion>
 		<httpcomponentsVersion>4.0.1</httpcomponentsVersion>
 		<log4jVersion>1.2.16</log4jVersion>
@@ -91,7 +91,6 @@
 		<snapshotRepository>
 			<id>local-snapshot-repository</id>
 			<name>Local Snapshot Repository</name>
-			<uniqueVersion>false</uniqueVersion>
 			<url>file://${user.home}/local-maven/deploy/snapshot-repository</url>
 		</snapshotRepository>
 
@@ -478,6 +477,24 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.beust</groupId>
+				<artifactId>jcommander</artifactId>
+				<version>1.4</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib-nodep</artifactId>
+				<version>2.2</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.jgoodies</groupId>
+				<artifactId>looks</artifactId>
+				<version>2.2.0</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
 				<version>2.5</version>
@@ -492,7 +509,7 @@
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy</artifactId>
-                <version>1.7.3</version>
+                <version>1.7.4</version>
 			</dependency>
 			
 			<dependency>
